Version 2.4.5
-------------
Set default encoder to multi_encoder3 if python version >= 3.












Version 2.4.4 (22 November 2015)
--------------------------------
Fix regression in audio resampling with sox.
GUI improvements to joystick / midi learner for gtk+ 3.x
GUI improvements for Events window.
Add support for joystick analog stick control.
Add improved warnings for letterboxing with missing imageMagick.
Fix overwide Clip Info windows.








Version 2.4.3 (15 November 2015)
--------------------------------
Fix occasional hang when inserting frames in clips.
Fix possible dataloss (effects applied) when re-entering multitrack mode.
Work around a GTK+ bug where menu items with submenus can no longer be set insensitive.
Fix for setting cdplayer device in Preferences.
Fix gtk critical in clip info window.
Fix window sizing errors in rfxbuilder.
Fix for encoding with sox version 14.4.2
Theming updates for darker themes with gtk+ 3.x
Add icedax as altname for cdda2wav.
Make better use of missing CD device warning.
Remove some spurious effect reinitialisations for webcams.
Allow application of audio effects to the backing audio track in multitrack mode.
Minor GUI improvements.
Prepend current directory to filenames in startup options when necessary.









Version 2.4.2 (12 September 2015)
---------------------------------
Fix crash after recording with pulseaudio external audio.
Fix possible crash when converting from YUV420 to UYVY / YUYV.
Fix memory issue in audio triggered video generators.
Fix buttons issue in the progress dialog (regression).
Fix occasional hang in shutdown via OSC.
Minor fixes for headless (nogui, noplaywin) modes.
Increase size of debug output window when encoding (Regression).
Fix for compiling without jack.
Fix crash in mask_overlay effect.
Fix some threading problems when running audio and video effects together.
Improve OSC responsiveness during playback.
Fixes for beat_detector, edge, vector_visualiser, and kaleidoscope plugins.