@@ -22,7 +22,7 @@ http://www.gnu.org/copyleft/gpl.html for license.
 See my vids at http://amv.reimeika.ca !
 """
 
-version = '0.1.7'
+version = '0.1.8'
 import os
 if os.name == 'nt':
     convert = 'convert.exe'
@@ -402,9 +402,17 @@ def do_encode():
 
     fpsnum = fps.split('/')[0]
     fpsden = fps.split('/')[1]
-    mplayer_opts = '-mf type=%s:fps=%s ' % (ext[1:],
-                                            eval('float('+fpsnum+')/'+fpsden)) + \
-                   '-vf hqdn3d=2:1:3,pp=va:128:8/ha:128:8/dr,dsize=%s -vo yuv4mpeg -ao null -nosound' % aspect
+
+    if mplayer != mplayer2:
+        mplayer_opts = '-mf type=%s:fps=%s ' % (ext[1:],
+                                                eval('float('+fpsnum+')/'+fpsden)) + \
+            '-vf hqdn3d=2:1:3,pp=va:128:8/ha:128:8/dr,dsize=%s -vo yuv4mpeg -ao null -nosound' % aspect
+
+    else:
+        mplayer_opts = '-mf type=%s:fps=%s ' % (ext[1:],
+                                                eval('float('+fpsnum+')/'+fpsden)) + \
+            '-vf hqdn3d=2:1:3,dsize=%s -vo yuv4mpeg -ao null -nosound' % aspect
+
 
     if img_dir != work_dir and not enhance:
         source_dir = img_dir
@@ -861,4 +869,6 @@ CHANGELOG:
                       tweaked audio quality settings.
 28 Jun 2007 : 0.1.5 : handles paths with spaces appropriately
                       (thanks Gabriel).
+
+2015 : 0.1.8 : remove -pp for mplayer2 (they removed it, duh)
 """
