@@ -439,8 +439,13 @@ void create_LiVES(void) {
 
   lives_widget_show(mainw->open);
 
+  lives_widget_show(mainw->open_sel);
+
+  // TODO - mpv
+
+  // TODO: show these options, but give errors for no mplayer / mplayer2
+
   if (capable->has_mplayer||capable->has_mplayer2) {
-    lives_widget_show(mainw->open_sel);
 #ifdef ENABLE_DVD_GRAB
     lives_widget_show(mainw->open_vcd_menu);
     lives_widget_show(mainw->open_vcd_submenu);
@@ -487,20 +492,22 @@ void create_LiVES(void) {
 
 #ifdef HAVE_YUV4MPEG
     if (capable->has_dvgrab) {
-      lives_container_add(LIVES_CONTAINER(submenu), mainw->firewire);
-      lives_widget_show(mainw->firewire);
+      if (capable->has_mplayer||capable->has_mplayer2) {
+	lives_container_add(LIVES_CONTAINER(submenu), mainw->firewire);
+	lives_widget_show(mainw->firewire);
 
-      lives_signal_connect(LIVES_GUI_OBJECT(mainw->firewire), LIVES_WIDGET_ACTIVATE_SIGNAL,
-                           LIVES_GUI_CALLBACK(on_live_fw_activate),
-                           NULL);
+	lives_signal_connect(LIVES_GUI_OBJECT(mainw->firewire), LIVES_WIDGET_ACTIVATE_SIGNAL,
+			     LIVES_GUI_CALLBACK(on_live_fw_activate),
+			     NULL);
+      }
+
+      lives_container_add(LIVES_CONTAINER(submenu), mainw->tvdev);
+      lives_widget_show(mainw->tvdev);
+
+      lives_signal_connect(LIVES_GUI_OBJECT(mainw->tvdev), LIVES_WIDGET_ACTIVATE_SIGNAL,
+			   LIVES_GUI_CALLBACK(on_live_tvcard_activate),
+			   NULL);
     }
-
-    lives_container_add(LIVES_CONTAINER(submenu), mainw->tvdev);
-    lives_widget_show(mainw->tvdev);
-
-    lives_signal_connect(LIVES_GUI_OBJECT(mainw->tvdev), LIVES_WIDGET_ACTIVATE_SIGNAL,
-                         LIVES_GUI_CALLBACK(on_live_tvcard_activate),
-                         NULL);
 
 #ifndef HAVE_UNICAP
   } // if (capable->has_mplayer)
